--- a/amelie/amelie.html
+++ b/amelie/amelie.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<title>Appartement Amelie</title>
-		<link rel="stylesheet" type="text/css" href="amelie.css">
+		<link rel="stylesheet" href="amelie.css">
 
 
 </head>
@@ -13,7 +13,7 @@
 				Tech,RDC,Bd Petite Provence</h1>
 				</div>
 
-		<div class="textphotocontainer">			<!-- Block containing both the textblock and the photoblock -->
+		<div class="textphotocontainer">			<!-- Block containing both the textblock and the photoblock elements-->
 				<div class="textblock">
 
 					  <h3 class="title">Amelie</h3>
@@ -31,6 +31,7 @@
 
 				<div class="photoblock">
 						<div class="imageframe">
+								<!-- If images appear upside down tag the image with the class upsidedown-->
 								<div><img src="photos/photo1.jpg" alt="photo1 image"></div>
 						</div>
 						<div class="imageframe">
